test/testdata/functions/anonymous/duplicate_params_error.lox
// error: x has already been declared
// lint error: x has already been declared
// error: y has already been declared
// lint error: y has already been declared
fun(x, y, z, x, y) {
  _ = x;
  _ = y;
  _ = z;
};
